nailing myself to the ground. fixing this file is bug 94036. made this compile, and removed the use of a parser by creating nodetests directly